fixed "Export CSV" button spacing

--- a/src/components/BounceRulesContainer/index.scss
+++ b/src/components/BounceRulesContainer/index.scss
@@ -1,3 +1,12 @@
-.csv-button {
+.csv-button-col {
   text-align: right;
+}
+
+.csv-button {
+  left: 20px;
+}
+
+.create-rule-button,
+.csv-button {
+  white-space: nowrap;
 }
